--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,4 +1,4 @@
-body{
+/*body{
 	font-family: 'Lato', sans-serif;
 	background: #EDEFF0;
 }
@@ -83,4 +83,4 @@ body{
 		font-weight: 100;
 		line-height: 1.5;
 	}
-}
+}*/
