--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
 	%header.main_header.clearfix
 		.wrapper
 			#logo
-				%p= link_to "senp41's Rails Forum", root_path
+				%p= link_to "Rails Forum", root_path
 			#buttons
 				- if user_signed_in?
 					= link_to "New post", new_post_path
