--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,9 +1,13 @@
 #posts
-	- @posts.each do |post|
-		.post
-			%h2.title= link_to post.title, post
-			%p.date
-				Published at
-				= time_ago_in_words(post.created_at)
-				by
-				= post.user.email
+	- if @posts.count == 0
+		%h2
+			No posts yet
+	- else
+		- @posts.each do |post|
+			.post
+				%h2.title= link_to post.title, post
+				%p.date
+					Published at
+					= time_ago_in_words(post.created_at)
+					by
+					= post.user.email
