--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,13 +2,18 @@
 	%h1= @post.title
 	%p= @post.content
 
-	%comments
-		%h2= @post.comments.count
-		= render @post.comments
+	%h2
+		= @post.comments.count
+		Comments		
+	= render @post.comments
 
-		%h3 Reply to thread
-		= render "comments/form"
+	%h3 Reply to thread
+	= render "comments/form"
 
-	= link_to 'Edit', edit_post_path(@post)
-	= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: "Are you sure?" }
-	= link_to "Home", root_path
+	%br/
+	%hr/
+	%br/
+
+	= link_to 'Edit', edit_post_path(@post), class: "button"
+	= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, class: "button"
+	= link_to 'Cancel', posts_path, class: "button"
