--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@ body{
 }
 .main_header{
 	width: 100%;
-	max-width:1280px;
+	/*max-width:1280px;*/
 	margin: 0 auto;
 	background: #ffffff;
 	#logo{
